--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "sass:watch":"sass --watch ./src/sass/main.scss ./src/css/main.css"
+    "sass:watch": "sass --watch ./src/sass/main.scss ./src/css/main.css"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
