--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "sass:watch": "sass --watch ./src/sass/main.scss ./src/css/main.css"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "bootstrap": "^5.3.3",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
