--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.41",
     "swiper": "^11.1.1",
     "zod": "^3.23.4"
   },
